# TyFunctional

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  MANIFEST.in  README.md  pyproject.toml  run-tests.sh
.github/workflows/: pythonpackage.yml
docs/: Makefile  conf.py  developer.rst  index.rst  make.bat  tyfunctional.rst
examples/: TyFunctional-pandas-tutorial.ipynb
tyfunctional/: __init__.py  execution.py  io.py  lineage.py  pipeline.py  streams.py  transformations.py
tyfunctional/test/: test_functional.py  test_io.py  test_streams.py  test_type.py  test_util.py
