[project]
name = "TyFunctional"
version = "1.5.0"
description = "Package for creating data pipelines with chain functional programming"
authors = [{ name = "Pedro Rodriguez", email = "me@pedro.ai" }]
maintainers = [{ name = "Pedro Rodriguez", email = "me@pedro.ai" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<4.0"
keywords = ["functional", "pipeline", "collection", "chain", "linq", "parallel"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    "dill>=0.2.5",
    "tabulate<=1.0.0",
]

[project.optional-dependencies]
all = ["pandas>=1.0.3"]

[project.urls]
Homepage = "https://github.com/han-nah-dev/TyFunctional"
Repository = "https://github.com/han-nah-dev/TyFunctional"
Documentation = "https://github.com/han-nah-dev/TyFunctional"

[tool.poetry]
packages = [{ include = "tyfunctional" }]

[tool.poetry.group.dev.dependencies]
black = "^23.1"
parametrize = "^0.1.1"
pytest = "^7.3.1"
pylint = "^3.3.3"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"
mypy = "^1.1.1"
types-tabulate = "^0.9.0.3"
pandas-stubs = "^2.0.3.230814"

[dependency-groups]
# Mirrors tool.poetry.group.dev.dependencies above for uv/PEP 735 tooling; Poetry (<2.0) only reads the tool.poetry table.
dev = [
    "black>=23.1,<24",
    "parametrize>=0.1.1,<0.2",
    "pytest>=7.3.1,<8",
    "pylint>=3.3.3,<4",
    "pytest-cov>=4.0.0,<5",
    "coverage>=7.2.5,<8",
    "mypy>=1.1.1,<2",
    "types-tabulate>=0.9.0.3,<0.10",
    "pandas-stubs>=2.0.3.230814,<3",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

# COMMON SETTINGS BELOW
[tool.pyright]
pythonVersion = "3.9"

[tool.mypy]
python_version = "3.9"
check_untyped_defs = false
disallow_any_generics = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[tool.ruff.lint]
select = [
  "F",
  "FA",
  "TCH",
  "UP",
  "PL",
]
ignore = [
  "UP008",
  "UP028",
  "PLR0913",
  "PLR2004",
  "PLR5501",
]

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.per-file-ignores]
"**/test/*.py" = [
  "ALL",
]
"docs/**/*.py" = [
  "ALL",
]
